[tool.poetry]
name = "dvf"
version = "0.1.0"
description = ""
authors = ["NyxAther <contact.nyxhemera@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.3.3"
numpy = "^1.21.2"
seaborn = "^0.11.2"
notebook = "^6.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
