[tool.poetry]
name = "dvf"
version = "0.1.0"
description = ""
authors = ["NyxAether <contact.nyxhemera@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "=1.3.5"
numpy = "^1.23.5"
tqdm = "^4.64.1"
joblib = "^1.2.0"
pyarrow = "^10.0.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
